cmake_minimum_required(VERSION 3.28)
project(ObjectOriented)

set(CMAKE_CXX_STANDARD 17)

add_executable(ObjectOriented


        #main.cpp

        01_BasicGrammar/Basic/Person.h
        01_BasicGrammar/Basic/Person.cpp
        #01_BasicGrammar/Basic/main.cpp
        #01_BasicGrammar/ConstructionAndDeatruction/person.cpp
        01_BasicGrammar/ConstructionAndDeatruction/person.h
        01_BasicGrammar/ConstructionAndDeatruction/main.cpp

        #01_BasicGrammar/Static/attribute.cpp
        #01_BasicGrammar/Static/function.cpp


)
